# colortypes

./: Cargo.toml  README.md
examples/: init.rs  initialization.rs
src/: color.rs  colors.rs  image.rs  lib.rs  matrix.rs  methods.rs  prelude.rs  types.rs
tests/: conversion.rs  initialization.rs
