[package]
name = "colortypes"
version = "0.3.1"
edition = "2021"

authors = ["Jacob Berube"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

repository = "https://github.com/ahhhh6980/colortypes"
description = "An abstract, safe, and concise color conversion library for rust nightly"
keywords = ["color", "graphics", "image", "XYZ", "CIELAB"]
categories = ["multimedia::images", "mathematics", "graphics"]

exclude = ["target",".git"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.7"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
rand = "0.8.5"
